Fix! - Selector `elementor:after` added spacing after the content

--- a/assets/css/frontend-rtl.css
+++ b/assets/css/frontend-rtl.css
@@ -126,7 +126,9 @@
 
 .elementor:after {
   position: absolute;
-  opacity: 0; }
+  opacity: 0;
+  width: 0;
+  height: 0; }
   @media (min-width: 1025px) {
     .elementor:after {
       content: 'desktop'; } }
